				Dear Emacs, please make this -*-Text-*- mode!
	**************************************************
	*						 *
	*	       1.8 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.8.0


USER-VISIBLE CHANGES



NEW FEATURES

    o	rep() is now a generic function, with default, POSIXct and
	POSIXlt methods.  For efficiency, the base code uses rep.int()
	rather than rep() where possible.

    o	print.summary.glm() now reports omitted coefficients in the
	same way as print.summary.lm(), and both show them as NAs in
	the table of coefficients.

    o	stripchart() now has `log', `add' and `at' arguments.

    o	checkAssignFuns() in package tools has been renamed to
	checkReplaceFuns().

    o	New option("scipen") provides some user control over the
	printing of numbers in fixed-point or exponential notation.
	(Contributed by David Brahm.)

    o	Arguments `unit' and `hmin' of plclust() are now implemented.

    o	factanal() now returns the test statistic and P-value formerly
	computed in the print method.

    o	contr.poly() has a new `scores' argument to use as the base set
	for the polynomials.

    o	The defaults for glm.control(epsilon=1e-8, maxit=25) have been
	tightened: this will produce more accurate results, slightly
	slower.

    o	The data editor is no longer limited to 65535 rows, and will
	be substantially faster for large numbers of columns.

    o	prcomp() now accepts complex matrices, and there is biplot()
	method for its output (in the real case).

    o	A new entry, sizeof.pointer, has been added to .Machine.

    o	strsplit(x, *) now preserves names() but won't work for
	non-character `x' anymore {formerly used as.character(x),
	destroying names(x)}.

    o	which.min(x) and which.max(x) now preserve names.

    o	gamma(n) is very slightly more precise for integer n in 11:50.

    o   New option `locatorBell' to control the confirmation beep
	during the use of locator() and identify().
