@@ -66,7 +66,6 @@
   \item{sizeof.long}{the number of bytes in a C \code{long} type.}
   \item{sizeof.longlong}{the number of bytes in a C \code{long long}
     type. Will be zero if there is no such type.}
-  }
   \item{sizeof.longdouble}{the number of bytes in a C \code{long double}
     type. Will be zero if there is no such type.}
   \item{sizeof.pointer}{the number of bytes in a C \code{SEXP}
