@@ -11,7 +11,8 @@
 
 USER-VISIBLE CHANGES
 
-
+    o   sub,gsub,grep,regexpr,chartr,tolower,toupper,substr,substring,
+        abbreviate and strsplit now handle missing values differently from "NA".
 
 NEW FEATURES
 
